refactor(#97): address code review comments - replace auth middleware by middleware loop per handler, removed unused code, replace Pascal case property names with camel case.

--- a/api/openapi/templates/fiber-handler.tmpl
+++ b/api/openapi/templates/fiber-handler.tmpl
@@ -2,24 +2,24 @@
 type FiberServerOptions struct {
 	BaseURL     string
 	Middleware []fiber.Handler
-	AuthHandler fiber.Handler
 }
 
 // RegisterHandlers creates http.Handler with routing matching OpenAPI spec.
 func RegisterHandlers(router fiber.Router, si ServerInterface) {
-	RegisterHandlersWithOptions(router, si, FiberServerOptions{AuthHandler: func (c *fiber.Ctx) error { return nil }})
+	RegisterHandlersWithOptions(router, si, FiberServerOptions{})
 }
 
 // RegisterHandlersWithOptions creates http.Handler with additional options
 func RegisterHandlersWithOptions(router fiber.Router, si ServerInterface, options FiberServerOptions) {
 {{if .}}wrapper := ServerInterfaceWrapper{
 Handler: si,
-AuthHandler: options.AuthHandler,
+Middleware: options.Middleware,
 }
 
 for _, m := range options.Middleware {
-    router.Use(fiber.Handler(m))
+    router.Use(m)
 }
+
 {{end}}
 {{range .}}
 router.{{.Method | lower | title }}(options.BaseURL+"{{.Path | swaggerUriToFiberUri}}", wrapper.{{.OperationId}})
