fix(#132): added missing err check fix for handler middleware.

--- a/api/openapi/templates/fiber-middleware.tmpl
+++ b/api/openapi/templates/fiber-middleware.tmpl
@@ -162,9 +162,11 @@ func (siw *ServerInterfaceWrapper) {{$opid}}(c *fiber.Ctx) error {
     {{end}}
   {{end}}
 
-    for _, m := range siw.handlerMiddleware {
-      m(c)
-  }
+	for _, m := range siw.handlerMiddleware {
+		if err := m(c); err != nil {
+			return err 
+		}
+	}
   return siw.handler.{{.OperationId}}(c{{genParamNames .PathParams}}{{if .RequiresParamObject}}, params{{end}})
 }
 {{end}}
